[package]
name = "matrix"
version = "0.1.0"
edition = "2021"
authors = ["branimir.maksimovic@icloud.com"]
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amx = { git = "https://github.com/bmaxa/AppleAmx.git" }
num = "*"
rand = "*"
